Add support for pagination
